# StockkarteMobileApp

./: README.md
appserver/: CMakeLists.txt  README.md  addlog.cpp  hivedetails.cpp  login.cpp  main.cpp  overviews.cpp  sqlconn.cpp
bienenapp/: README.md  pubspec.yaml
bienenapp/android/app/: build.gradle.kts
bienenapp/android/app/src/main/: AndroidManifest.xml
bienenapp/android/app/src/main/kotlin/com/example/bienenapp/: MainActivity.kt
bienenapp/lib/: cppasync.dart  generated_bindings.dart  main.dart
bienenapp/lib/core/: bridge_web.dart  native_backend.dart
bienenapp/lib/core/api/: api.dart  api_io.dart  api_stub.dart  api_web.dart
bienenapp/lib/router/: app_router.dart
bienenapp/lib/screens/: action_popups.dart  hive_screen.dart  home_screen.dart  login_screen.dart  volk_screen.dart
bienenapp/linux/: CMakeLists.txt
bienenapp/linux/runner/: my_application.cc
bienenapp/src/: CMakeLists.txt  httplib.h  logic.cpp  logic.h
bienenapp/test/: widget_test.dart
bienenapp/web/: bridge.js  bridge.wasm  index.html  manifest.json
